--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,9 @@
         .border-secondary-subtle {
             border-color: rgba(0, 0, 0, 0.0) !important;
         }
+        #scrollTopBtn {
+            display: none;
+        }
     </style>  
 </head>
 <body class="container mt-4">
@@ -73,9 +76,9 @@
       </div>      
     </form>
 
-    <div class="text-center sticky-bottom float-start">
-      <button onclick="scrollToTop()" id="scrollTopBtn" class="btn btn-lg mb-5 btn-info">↑ Top</button>
-    </div>
+    <div class="position-fixed top-0 mt-5" id="scrollTopBtn" style="display: none; z-index: 1050;">
+        <button onclick="scrollToTop()" class="btn btn-lg btn-info">↑ Top</button>
+    </div>    
 
     <footer class="bg-body-tertiary text-center text-lg-start footer mt-3">
         <div class="p-3 text-center" style="background-color: rgba(0, 0, 0, 0.05);">
